# labs

./: .gitmodules  LICENSE  README.md  index.html
2term/lab3/lab3b/: CMakeLists.txt
2term/lab3/lab3b/Entities/: Monster.cpp  Monster.hpp
2term/lab3/lab3b/Files/: interactiveModeCommands.txt
2term/lab3/lab3b/Modes/: Benchmark.cpp  InteractiveMode.hpp
2term/lab4/: CMakeLists.txt  README.md  main.cpp
2term/lab4/Files/: DemoModeCommands.txt  ExpressionTreeCommands.txt  GeneralTreeCommands.txt
2term/lab4/Modes/: Core.cpp  Core.hpp  Mode.cpp
2term/lab4/Rand/: rand.hpp
2term/lab4/Trees/: ExpressionTree.cpp  GeneralTree.hpp  Tree.hpp
2term/lab6/: CMakeLists.txt
2term/lab6/Containers/: Container.hpp
2term/lab6/OrderedLists/: AVLOrderedList.hpp  LOrderedList.hpp  OrderedList.hpp
2term/lab6/Random/: rand.hpp
2term/lab6/Trees/: BST.hpp
3term/algorithms/lab4/: CMakeLists.txt
3term/algorithms/lab4/include/Lab4/: ConsoleColor.hpp  Solution.hpp
3term/algorithms/lab4/src/: ConsoleColor.cpp  ConsoleColor.hpp  Solution.cpp  Solution.hpp  main.cpp
3term/algorithms/lab5/: CMakeLists.txt
3term/algorithms/lab5/src/: Benchmark.hpp  Matrix.hpp  Strassen.hpp  Timer.hpp  main.cpp
3term/algorithms/lab5/src/Algorithms/: Random.hpp  Strassen.hpp
3term/algorithms/lab6/: CMakeLists.txt
3term/algorithms/lab6/src/: IsCyclical.cpp  IsCyclical.hpp  main.cpp
3term/algorithms/lab7/: CMakeLists.txt
3term/algorithms/lab7/src/: main.cpp
3term/algorithms/lab7/src/Algorithms/: RabinKarp.cpp  RabinKarp.hpp
3term/algorithms/lab7/src/Matrix/: Matrix.hpp
3term/algorithms/lab7/src/RabinKarp/: MatrixRabinKarp.hpp  StringRabinKarp.cpp
3term/database/lab1/: CMakeLists.txt
3term/database/lab1/files/: city.fl  city.ind  country.fl  country.ind  person.fl  person.ind
3term/database/lab1/include/: functions.h  user_interface.h
3term/database/lab1/include/structs/: city.h  country.h  global_data.h  person.h
3term/database/lab1/src/: functions.c  main.c  user_interface.c
3term/lab1/: CMakeLists.txt  README.md  main.cpp
3term/lab1/include/DataStructures/: Array.hpp  DynamicContainer.hpp  Graph.hpp  ListGraph.hpp  MatrixGraph.hpp  SortedContainer.hpp  StaticContainer.hpp
3term/lab1/src/: main.cpp
3term/oop/lab1/: CMakeLists.txt  README.md
3term/oop/lab1/include/DataStructures/: Graph.hpp  ListGraph.hpp  MatrixGraph.hpp
3term/oop/lab1/include/DateTime/: Date.hpp  DateTime.hpp  Time.hpp
3term/oop/lab1/include/FileSystem/: Directory.hpp  File.hpp  FileSystem.hpp  FileSystemObject.hpp
3term/oop/lab1/lib/googletest-master/: googletest-distribution.cbp
3term/oop/lab1/src/: main.cpp
3term/oop/lab1/src/FileSystem/: Directory.cpp  File.cpp  FileSystem.cpp  FileSystemObject.cpp
3term/oop/lab1/tests/: ClassName.hpp  ExpressionTreeFixture.cpp  ListGraphFixture.cpp  MatrixGraphFixture.cpp  test.cpp
3term/oop/project/: CMakeLists.txt  README.md
3term/oop/project/docs/: Report.docx
3term/oop/project/src/: main.cpp
3term/oop/project/src/Application/: Application.cpp  Application.hpp
3term/oop/project/src/Fractals/: MandelbrotSet.cpp  MandelbrotSet.hpp
3term/oop/project/src/Gui/: Button.cpp  Button.hpp  Slider.cpp  Slider.hpp
3term/oop/project/src/Random/: Random.hpp
Term2/lab2/lab2a/: CMakeLists.txt
Term2/lab2/lab2a/files/: benchmarkArray.txt
Term2/lab2/lab2a/modes/: Core.cpp
Term2/lab3/lab3a/: CMakeLists.txt  main.cpp
Term2/lab3/lab3a/Modes/: Core.cpp  DemoMode.cpp
Term4/Algorithms/Lab03/: CMakeLists.txt
Term4/Algorithms/Lab03/src/: SplayTree.hpp  SplayTree.inl  main.cpp
Term4/Algorithms/Lab04/: CMakeLists.txt
Term4/Algorithms/Lab04/src/: OptimalBinarySearchTree.hpp  OptimalBinarySearchTree.inl  main.cpp
Term4/OOP/Lab01/RefactoredProject/: CMakeLists.txt
Term4/OOP/Lab03/Benchmark/: CMakeLists.txt
Term5/: README.md
Term5/os/lab1/src/: CMakeLists.txt  computation_function.hpp  keyboard.cpp  keyboard.hpp  main.cpp  manager.cpp  manager.hpp  manager.inl  nonblocking_read_poll.cpp  nonblocking_read_poll.hpp  platform_detection.hpp  process.cpp  process.hpp  unnamed_pipe.cpp  unnamed_pipe.hpp  unnamed_pipe.inl
term2/lab1/: CMakeLists.txt  main.cpp
term2/lab1/files/: benchmark2.txt
term2/lab1/location/: Location.cpp
term2/lab2/lab2b/: CMakeLists.txt
term2/lab2/lab2b/Components/: MovementComponent.cpp
term2/lab2/lab2b/Entities/: Box.hpp  Enemy.cpp  Entity.hpp
term2/lab2/lab2b/Map/: Map.cpp
term2/lab2/lab2b/Modes/: Core.cpp
term2/lab5/: CMakeLists.txt
term2/lab5/FIles/: ndirectedWeighedBenchmark.txt
term2/lab5/Graphs/: LGraph.cpp  MGraph.hpp
term2/lab5/Modes/: ConsoleInterface.cpp  Core.cpp  Mode.hpp
term2/lab5/TextTable/: TextTable.hpp
term2/lab5/Trees/: SpanningTree.cpp
term3/Algorithms/lab2/: CMakeLists.txt
term3/Algorithms/lab2/include/: Solution.hpp  Timer.hpp
term3/Algorithms/lab2/src/: main.cpp
term3/Database/lab1/: CMakeLists.txt
term3/Database/lab1/include/: functions.h
term3/Database/lab1/src/: main.c
term4/Algorithms/Lab02/: CMakeLists.txt  README.md
term4/Algorithms/Lab02/src/: OrderStatisticsTree.hpp  OrderStatisticsTree.inl  main.cpp
term4/Algorithms/Lab04/: CMakeLists.txt
term4/Algorithms/Lab04/src/: IteratorRange.hpp
term4/Algorithms/Lab06/: CMakeLists.txt
term4/Algorithms/Lab06/src/: BPlusInternalNode.hpp  BPlusLeafNode.inl  BPlusNode.hpp
term4/Algorithms/Lab06/tests/: BPlusTree.cpp
term4/Algorithms/Lab07/: CMakeLists.txt  README.md
term4/Algorithms/Lab07/Source/: BinomialHeap.inl  BinomialTree.hpp  BinomialTree.inl
term4/OOP/Lab03/: CMakeLists.txt
term4/OOP/Lab03/Benchmark/: Benchmark.cpp
term4/OOP/Lab03/Source/: Algorithm.hpp  Application.cpp  ControllableAlgorithm.hpp  ControllableAlgorithm.inl  SortLayer.cpp  SortLayer.hpp  SortableQuad.hpp
term4/OOP/Lab03/Tests/: CMakeLists.txt  InsertionSortTest.cpp  MergeSortTest.cpp  SelectionSortTest.cpp  ShellSortTest.cpp
term5/nm/lab2/src/: CMakeLists.txt  main.cpp  math.hpp  math.inl  matrix.hpp  matrix.inl  matrix_algorithm.hpp  matrix_algorithm.inl  vector.hpp  vector.inl
term5/os/lab1/tests/: CMakeLists.txt
(+959 files in other folders)
